Included Content and Images

--- a/views/index.html
+++ b/views/index.html
@@ -37,10 +37,10 @@
 			</footer>
 		</div>
 		<div id="s2" class="section">
-			<h1 align="center">What do we do?</h1>
+			<h1 align="center">About Us</h1>
 			<div class="text">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				Women Techmakers, in association with Google Developers Group is aimed at increasing woman participation in all spheres of Computer Science and Technology.It's Manipal chapter, Code Czarinas, created with the above objective, combines technology with team spirit and hard work. 
+				At Manipal, our community aims at progressive, community-based learning via long term projects. The weekly meet-ups, workshops,talks by speakers and group discussions are vital to  strengthening one's technical skill-set, gaining exposure to the plethora of technological domains and building connections.            
 				<div class="events">
 					
 				</div>
@@ -55,7 +55,7 @@
 						<i class="fa fa-graduation-cap fa-4x"></i>
 					</div>
 					<div class="icon-text">
-						Interns at Microsoft, Goldman Sachs, Sandisk,Cisco,RedHat and Deloitte
+						Harvard Select
 					</div>
 				</div>
 				<div class="achievement">
@@ -63,7 +63,7 @@
 						<i class="fa fa-pencil fa-4x"></i>
 					</div>
 					<div class="icon-text">
-						Members with research publications in Scopus Indexed, Thomson Reuters Indexed ,DOI Indexed Journals and Springer Journals.
+						Members with research publications in Scopus indexed, Thomson Reuters indexed, DOI indexed journals and Springer journals.
 
 					</div>
 				</div>
@@ -72,7 +72,7 @@
 						<i class="fa fa-code fa-4x"></i>
 					</div>
 					<div class="icon-text">
-						GHCI,GSoC,RGSoC and Outreachy scholars
+						GHCI,GSoC,RGSoC and Outreachy Selects and Scholars
 					</div>
 				</div>
 				<div class="achievement">
@@ -88,7 +88,7 @@
 						<i class="fa fa-female fa-4x"></i>
 					</div>
 					<div class="icon-text">
-						Harvard select
+						Interns and SDEs at Microsoft, Goldman Sachs, Sandisk, Cisco, RedHat and Deloitte
 					</div>
 				</div>
 				
@@ -136,8 +136,8 @@
 	<div id="s3" class="section fp-auto-height">
 		<h1 align="center">Our Team</h1>
 		<div class="text">
+		We're a group of budding developers,designers, researchers,coders, leaders and tech-enthusiasts! WTM Manipal spans college-going undergraduates to graduates. 
 		</div>
-
 	</div>
 	<div id="s4" class="section">
 		<h1 align="center" class="inverted">Get in touch with us</h1>
