--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Women Techmakers, Manipal</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300|Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.4/jquery.fullpage.css">
 
@@ -23,9 +25,9 @@
 					<li><a href="#s5">Gallery</a></li>
 					<li><a href="#s3">Team</a></li>
 					<li><a href="#s4">Contact</a></li>
-					<li><i class="fa fa-facebook"></i></li>
-					<li><i class="fa fa-meetup"></i></li>
-					<li><i class="fa fa-github"></i></li>
+					<li><a href="https://www.facebook.com/GDGManipal/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://meetup.com/GDG-Manipal/" target="_blank"><i class="fa fa-meetup"></i></a></li>
+					<li><a href="https://github.com/GDGManipal/WTM" target="_blank"><i class="fa fa-github"></i></a></li>
 				</ul>
 			</nav>
 
@@ -36,7 +38,7 @@
 				</div>
 			</footer>
 		</div>
-		<div id="s2" class="section">
+		<div id="s2" class="section fp-auto-height">
 			<h1 align="center">What do we do?</h1>
 			<div class="text">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -150,7 +152,9 @@
 			</form>
 		</center>
 		<footer id="contactFooter">
-
+			<span style="position: absolute;bottom: 20px;color:#FFF;">
+			 Made with <i class="fa fa-heart heartbeat animate-infinite-heartbeat"></i> by WTM, Manipal
+			 </span>
 			<img style="position:absolute;right:120px;bottom: 20px;" src="https://www.womentechmakers.com/static/images/logo-lockup-white.svg" height="40" />
 		</footer>
 	</div>
