--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -77,6 +77,7 @@ a
 
 nav
 {
+	display: block;
 	height: 85px;
 	width: 100%;
 	padding: 30px;
@@ -255,9 +256,20 @@ form textarea
 #contactFooter
 {
 	bottom: 20px;
+	font-family: 'Open Sans',sans-serif
 }
 
-
+#contactFooter span
+{
+	left: -70px;
+	font-size: 18px;
+}
+#contactFooter i
+{
+	color: red;
+	margin-left: 5px;
+	margin-right: 5px;
+}
 .event
 {
 	width: 18%;
@@ -418,23 +430,23 @@ iframe
 
 input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 	font-size: 15px;
-  padding-left: 8px;
-  font-family: 'Open Sans',sans-serif;
+	padding-left: 8px;
+	font-family: 'Open Sans',sans-serif;
 }
 input::-moz-placeholder { /* Firefox 19+ */
 	font-size: 15px;
-  padding-left: 8px;
-  font-family: 'Open Sans',sans-serif;
+	padding-left: 8px;
+	font-family: 'Open Sans',sans-serif;
 }
 input:-ms-input-placeholder { /* IE 10+ */
 	font-size: 15px;
-  padding-left: 8px;
-  font-family: 'Open Sans',sans-serif;
+	padding-left: 8px;
+	font-family: 'Open Sans',sans-serif;
 }
 input:-moz-placeholder { /* Firefox 18- */
 	font-size: 15px;
-  padding-left: 8px;
-  font-family: 'Open Sans',sans-serif;
+	padding-left: 8px;
+	font-family: 'Open Sans',sans-serif;
 }
 textarea
 {
@@ -444,24 +456,69 @@ textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 	font-size: 15px;
 	
 	font-family: 'Open Sans',sans-serif;
-  
+
 }
 textarea::-moz-placeholder { /* Firefox 19+ */
 	font-size: 15px;
 	
 	font-family: 'Open Sans',sans-serif;
-  
+
 }
 textarea:-ms-input-placeholder { /* IE 10+ */
 	font-size: 15px;
 	
 	font-family: 'Open Sans',sans-serif;
-  
+
 }
 textarea:-moz-placeholder { /* Firefox 18- */
 	
 	font-size: 15px;
 	font-family: 'Open Sans',sans-serif;
-  
+
+}
+
+@-webkit-keyframes heartbeat{
+	0%{-webkit-transform:scale(1)}
+	50%{-webkit-transform:scale(1.4)}
+	100%{-webkit-transform:scale(1)}
+}
+@-moz-keyframes heartbeat{
+	0%{-moz-transform:scale(1)}
+	50%{-moz-transform:scale(1.4)}
+	100%{-moz-transform:scale(1)}
+}
+@-o-keyframes heartbeat{
+	0%{-o-transform:scale(1)}
+	50%{-o-transform:scale(1.4)}
+	100%{-o-transform:scale(1)}
+}
+@keyframes heartbeat{
+	0%{transform:scale(1)}
+	50%{transform:scale(1.4)}
+	100%{transform:scale(1)}
+}
+.heartbeat{ -webkit-animation-name:heartbeat; -moz-animation-name:heartbeat; -o-animation-name:heartbeat; animation-name:heartbeat; }
+.animate-infinite-heartbeat { -webkit-animation: heartbeat 2s infinite; /* Chrome, Safari, Opera */ animation: heartbeat 2s infinite; }
+
+
+@media screen
+and (max-device-width: 800px) {
+
+	nav ul
+	{
+		display: none !important;
+	}
+
+	nav img
+	{
+
+		display: none;
+	}
+
+	.event
+	{
+		float: none;
+		width: 70%;
+	}
 }
 
