--- a/views/index.html
+++ b/views/index.html
@@ -97,6 +97,15 @@
 			</ul>	
 		</div>
 	</div>
+
+	<div id='s10' class="section">
+	<div class="text">
+	"Never see yourself as a female entrepreneur or a woman in tech. Just think of yourself as someone who's passionate." <br>
+    - Leah Busque
+	</div>
+	</div>
+
+
 	<div class="section" id="s5">
 		<h1 align="center" class="inverted">Gallery</h1>
 		<div class="text">
@@ -139,6 +148,13 @@
 		We're a group of budding developers,designers, researchers,coders, leaders and tech-enthusiasts! WTM Manipal spans college-going undergraduates to graduates. 
 		</div>
 	</div>
+	
+	<div id='s9' class="section">
+	<div class="text">
+	"I learned to always take on things I'd never done before. Growth and comfort do not coexist." <br> - Ginny Rometty, CEO, IBM 
+	</div>
+	</div>
+
 	<div id="s4" class="section">
 		<h1 align="center" class="inverted">Get in touch with us</h1>
 		<center>
