--- a/views/index.html
+++ b/views/index.html
@@ -12,13 +12,27 @@
 </head>
 <body>
 	<div id="fullpage">
+		<div id="mySidenav" class="sidenav">
+			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+			<a href="#s1">Home</a>
+			<a href="#s2">About</a>
+			<a href="#s5">Gallery</a>
+			<a href="#s3">Team</a>
+			<a href="#s4">Contact</a>
+			<div class="share-icons">
+			<li><a href="https://www.facebook.com/GDGManipal/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+			<li><a href="https://meetup.com/GDG-Manipal/" target="_blank"><i class="fa fa-meetup"></i></a></li>
+			<li><a href="https://github.com/GDGManipal/WTM" target="_blank"><i class="fa fa-github"></i></a></li>
+			</div>
+			
+		</div>
 		<div id="s1" class="section">
 			<nav>
-				
+				<i class="fa fa-bars fa-2x"></i>
 				<img src="/images/logo.png" height="40" />
 				<h1 class="logoHeading">Women Techmakers</h1>
 				<h3 class="logoSubHeading">Manipal | More women in technology</h3>
-				
+
 				<ul>
 					<li><a href="#s1">Home</a></li>
 					<li><a href="#s2">About</a></li>
@@ -39,7 +53,7 @@
 			</footer>
 		</div>
 
-		<div id="s2" class="section">
+		<div id="s2" class="section fp-auto-height">
 			<h1 align="center">About Us</h1>
 
 			<div class="text">
@@ -48,11 +62,12 @@
 				<div class="events">
 					
 				</div>
+				<div class="clear"></div>
 			</div>
 		</div>
-		<div id="s7" class="section">
+		<div id="s7" class="section fp-auto-height">
 			<h1 align="center">Achievements</h1>
-			<div class="text">
+			<div class="text forDesktop">
 
 				<div class="achievement">
 					<div class="icon">
@@ -96,91 +111,158 @@
 					</div>
 				</div>
 				
-
+				<div class="clear"></div>
 				
-			</ul>	
+
+			</div>
+			<div class="text forMobile">
+				<div class="event">
+					<div class="event-image">
+						<i class="fa fa-graduation-cap fa-4x"></i>
+					</div>
+					<div class="event-desc">
+
+						<div class="event-description">
+							Harvard Select
+						</div>
+					</div>
+				</div>
+
+				<div class="event">
+					<div class="event-image">
+						<i class="fa fa-pencil fa-4x"></i>
+					</div>
+					<div class="event-desc">
+						
+						<div class="event-description">
+							Members with research publications in Scopus indexed, Thomson Reuters indexed, DOI indexed journals and Springer journals.
+						</div>
+					</div>
+				</div>
+
+				<div class="event">
+					<div class="event-image">
+						<i class="fa fa-code fa-4x"></i>
+					</div>
+					<div class="event-desc">
+						
+						<div class="event-description">
+							GHCI, GSoC, RGSoC and Outreachy Selects and Scholars.
+						</div>
+					</div>
+				</div>
+
+				<div class="event">
+					<div class="event-image">
+						<i class="fa fa-book fa-4x"></i>
+					</div>
+					<div class="event-desc">
+						
+						<div class="event-description">
+							IISc and IIT research interns.
+						</div>
+					</div>
+				</div>
+
+				<div class="event">
+					<div class="event-image">
+						<i class="fa fa-female fa-4x"></i>
+					</div>
+					<div class="event-desc">
+						
+						<div class="event-description">
+							Interns and SDEs at Microsoft, Goldman Sachs, Sandisk, Cisco, RedHat and Deloitte.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="s11" class="section">
+			"Never see yourself as a female entrepreneur or a woman in tech. Just think of yourself as someone who's passionate." <br><br><br> - <span>Leah Busque </span>
+		</div>
+		<div class="section fp-auto-height" id="s5">
+			<h1 align="center" class="inverted">Gallery</h1>
+			<div class="text">
+				<div class="slide">
+					<img data-src="/images/photos/File1.jpg" />
+					<img data-src="/images/photos/File2.jpg"/>
+					<img data-src="/images/photos/File3.jpg"/>
+					<img data-src="/images/photos/File4.jpg"/>
+					<img data-src="/images/photos/File5.jpg" />
+					<img data-src="/images/photos/File6.jpg"/>
+					<img data-src="/images/photos/File7.jpg"/>
+					<img data-src="/images/photos/File37.jpeg"/>
+					<div class="clear"></div>
+				</div>
+				<div class="slide">
+					<img data-src="/images/photos/File11.jpg" />
+					<img data-src="/images/photos/File12.jpg"/>
+					<img data-src="/images/photos/File11.jpg"/>
+					<img data-src="/images/photos/File12.jpg"/>
+					<img data-src="/images/photos/File13.jpg" />
+					<img data-src="/images/photos/File14.jpg"/>
+					<img data-src="/images/photos/File15.jpeg"/>
+					<img data-src="/images/photos/File16.jpeg"/>
+					<div class="clear"></div>
+				</div>
+				<div class="slide">
+					<img data-src="/images/photos/File17.jpeg" />
+					<img data-src="/images/photos/File18.jpeg"/>
+					<img data-src="/images/photos/File19.jpeg"/>
+					<img data-src="/images/photos/File20.jpeg"/>
+					<img data-src="/images/photos/File21.jpeg" />
+					<img data-src="/images/photos/File22.jpeg"/>
+					<img data-src="/images/photos/File23.jpeg"/>
+					<img data-src="/images/photos/File24.jpeg"/>
+					<div class="clear"></div>
+				</div>
+				<div class="slide">
+					<img data-src="/images/photos/File25.jpeg" />
+					<img data-src="/images/photos/File46.jpeg"/>
+					<img data-src="/images/photos/File27.jpeg"/>
+					<img data-src="/images/photos/File28.jpeg"/>
+					<img data-src="/images/photos/File43.jpeg" />
+					<img data-src="/images/photos/File45.jpeg"/>
+					<img data-src="/images/photos/File44.jpeg"/>
+					<img data-src="/images/photos/File32.jpeg"/>
+					<div class="clear"></div>
+				</div>
+
+			</div>
+		</div>
+		<div id="s6" class="section fp-auto-height">
+			<iframe src="https://www.youtube.com/embed/PrXarTh77EA" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div id="s3" class="section fp-auto-height">
+			<h1 align="center">Our Team</h1>
+			<div class="team-text">We're a group of budding developers, designers, researchers, coders, leaders and tech-enthusiasts! WTM Manipal spans college-going undergraduates to graduates. </div>
+			<div class="text">
+
+			</div>
+			<div class="clear"></div>
+		</div>
+		<div id="s10" class="section">
+			"I learned to always take on things I'd never done before. Growth and comfort do not coexist." <br><br><br> - <span>Ginny Rometty, CEO, IBM </span>
+		</div>
+		<div id="s4" class="section">
+			<h1 align="center">Get in touch with us</h1>
+			<center>
+				<form>
+					<input id="name" name="name" class="input" type="text" placeholder="Name" />
+					<input id="email" name="email" class="input" type="email" placeholder="Email" />
+					<textarea id="message" name="message" placeholder="Message"></textarea>
+					<button class="wtmDefault">SUBMIT</button>
+					<div class="message"></div>
+				</form>
+			</center>
+			<footer id="contactFooter">
+				<span style="position: absolute;bottom: 20px;color:#FFF;">
+					Made with <i class="fa fa-heart heartbeat animate-infinite-heartbeat"></i> by WTM, Manipal
+				</span>
+				<img class="footerLogo" style="position:absolute;right:40px;bottom: 15px;" src="https://www.womentechmakers.com/static/images/logo-lockup-white.svg" height="40" />
+			</footer>
 		</div>
 	</div>
-	<div id="s11" class="section">
-	"Never see yourself as a female entrepreneur or a woman in tech. Just think of yourself as someone who's passionate." <br><br><br> - <span>Leah Busque </span>
-	</div>
-	<div class="section" id="s5">
-		<h1 align="center" class="inverted">Gallery</h1>
-		<div class="text">
-			<div class="slide">
-				<img data-src="/images/photos/File1.jpg" />
-				<img data-src="/images/photos/File2.jpg"/>
-				<img data-src="/images/photos/File3.jpg"/>
-				<img data-src="/images/photos/File4.jpg"/>
-				<img data-src="/images/photos/File5.jpg" />
-				<img data-src="/images/photos/File6.jpg"/>
-				<img data-src="/images/photos/File7.jpg"/>
-				<img data-src="/images/photos/File37.jpeg"/>
-			</div>
-			<div class="slide">
-				<img data-src="/images/photos/File11.jpg" />
-				<img data-src="/images/photos/File12.jpg"/>
-				<img data-src="/images/photos/File11.jpg"/>
-				<img data-src="/images/photos/File12.jpg"/>
-				<img data-src="/images/photos/File13.jpg" />
-				<img data-src="/images/photos/File14.jpg"/>
-				<img data-src="/images/photos/File15.jpeg"/>
-				<img data-src="/images/photos/File16.jpeg"/>
-			</div>
-			<div class="slide">
-				<img data-src="/images/photos/File17.jpeg" />
-				<img data-src="/images/photos/File18.jpeg"/>
-				<img data-src="/images/photos/File19.jpeg"/>
-				<img data-src="/images/photos/File20.jpeg"/>
-				<img data-src="/images/photos/File21.jpeg" />
-				<img data-src="/images/photos/File22.jpeg"/>
-				<img data-src="/images/photos/File23.jpeg"/>
-				<img data-src="/images/photos/File24.jpeg"/>
-			</div>
-			<div class="slide">
-				<img data-src="/images/photos/File25.jpeg" />
-				<img data-src="/images/photos/File46.jpeg"/>
-				<img data-src="/images/photos/File27.jpeg"/>
-				<img data-src="/images/photos/File28.jpeg"/>
-				<img data-src="/images/photos/File43.jpeg" />
-				<img data-src="/images/photos/File45.jpeg"/>
-				<img data-src="/images/photos/File44.jpeg"/>
-				<img data-src="/images/photos/File32.jpeg"/>
-			</div>
-		</div>
-	</div>
-	<div id="s6" class="section fp-auto-height">
-		<iframe src="https://www.youtube.com/embed/PrXarTh77EA" frameborder="0" allowfullscreen></iframe>
-	</div>
-	<div id="s3" class="section fp-auto-height">
-		<h1 align="center">Our Team</h1>
-		<div class="team-text">We're a group of budding developers, designers, researchers, coders, leaders and tech-enthusiasts! WTM Manipal spans college-going undergraduates to graduates. </div>
-		<div class="text">
-		
-		</div>
-	</div>
-	<div id="s10" class="section">
-	"I learned to always take on things I'd never done before. Growth and comfort do not coexist." <br><br><br> - <span>Ginny Rometty, CEO, IBM </span>
-	</div>
-	<div id="s4" class="section">
-		<h1 align="center">Get in touch with us</h1>
-		<center>
-			<form>
-				<input id="name" name="name" class="input" type="text" placeholder="Name" />
-				<input id="email" name="email" class="input" type="email" placeholder="Email" />
-				<textarea id="message" name="message" placeholder="Message"></textarea>
-				<button class="wtmDefault">SUBMIT</button>
-				<div class="message"></div>
-			</form>
-		</center>
-		<footer id="contactFooter">
-			<span style="position: absolute;bottom: 20px;color:#FFF;">
-			 Made with <i class="fa fa-heart heartbeat animate-infinite-heartbeat"></i> by WTM, Manipal
-			 </span>
-			<img style="position:absolute;right:40px;bottom: 15px;" src="https://www.womentechmakers.com/static/images/logo-lockup-white.svg" height="40" />
-		</footer>
-	</div>
-</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>
 
