--- a/views/index.html
+++ b/views/index.html
@@ -14,11 +14,11 @@
 	<div id="fullpage">
 		<div id="mySidenav" class="sidenav">
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-			<a href="#s1">Home</a>
-			<a href="#s2">About</a>
-			<a href="#s5">Gallery</a>
-			<a href="#s3">Team</a>
-			<a href="#s4">Contact</a>
+			<a class="navItem" href="#s1">Home</a>
+			<a class="navItem" href="#s2">About</a>
+			<a class="navItem" href="#s5">Gallery</a>
+			<a class="navItem" href="#s3">Team</a>
+			<a  class="navItem"href="#s4">Contact</a>
 			<div class="share-icons">
 			<li><a href="https://www.facebook.com/GDGManipal/" target="_blank"><i class="fa fa-facebook"></i></a></li>
 			<li><a href="https://meetup.com/GDG-Manipal/" target="_blank"><i class="fa fa-meetup"></i></a></li>
@@ -34,11 +34,11 @@
 				<h3 class="logoSubHeading">Manipal | More women in technology</h3>
 
 				<ul>
-					<li><a href="#s1">Home</a></li>
-					<li><a href="#s2">About</a></li>
-					<li><a href="#s5">Gallery</a></li>
-					<li><a href="#s3">Team</a></li>
-					<li><a href="#s4">Contact</a></li>
+					<li><a class="navItem" href="#s1">Home</a></li>
+					<li><a class="navItem" href="#s2">About</a></li>
+					<li><a class="navItem" href="#s5">Gallery</a></li>
+					<li><a class="navItem" href="#s3">Team</a></li>
+					<li><a class="navItem" href="#s4">Contact</a></li>
 					<li><a href="https://www.facebook.com/GDGManipal/" target="_blank"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="https://meetup.com/GDG-Manipal/" target="_blank"><i class="fa fa-meetup"></i></a></li>
 					<li><a href="https://github.com/GDGManipal/WTM" target="_blank"><i class="fa fa-github"></i></a></li>
