--- a/views/index.html
+++ b/views/index.html
@@ -128,7 +128,7 @@
 
 
         </div>
-        <div class="text forMobile">
+        <!-- <div class="text forMobile">
             <div class="event">
                 <div class="event-image">
                     <i class="fa fa-graduation-cap fa-4x"></i>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <div id="s11" class="section parallax-window-2">
         "Never see yourself as a female entrepreneur or a woman in tech. Just think of yourself as someone who's
@@ -261,7 +261,7 @@
         <span>Ginny Rometty, CEO, IBM </span>
     </div>
     <div id="s4" class="section">
-        <h1 align="center" style="color: #458f77;">Get In Touch With Us</h1>
+        <h1 align="center" style="color: #458f77;padding: 10px;">Get In Touch With Us</h1>
         <div class="text">
             We'd love to hear from you! Tell us your story!
         </div>
