Contact API changed

--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,13 @@
 <head>
     <title>Women Techmakers, Manipal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="WTM Manipal" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wtm.gdgmanipal.in" />
+    <meta property="og:image" content="https://www.womentechmakers.com/static/images/wtm-tagline-logo-hdr.svg" />
+    <meta name="description" content="Google's Women Techmakers program provides visibility, community, and resources for women in technology.">
+    <meta name="keywords" content="Computer Science,Design,Code,Web,Hack,Build,Google,GDG,Android,Windows,iOS,Workshops,Seminars">
+    <meta name="author" content="IECSE Web Team">
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:300|Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css"
@@ -75,7 +82,7 @@
         <div class="text">
             <div class="about-text">
                 Women Techmakers, in association with Google Developers Group is aimed at increasing woman participation
-                in all spheres of Computer Science and Technology.It's Manipal chapter, Code Czarinas, created with the
+                in all spheres of Computer Science and Technology.Its Manipal chapter, Code Czarinas, created with the
                 above objective, combines technology with team spirit and hard work.
                 At Manipal, our community aims at progressive, community-based learning via long term projects. The
                 weekly meet-ups, workshops,talks by speakers and group discussions are vital to strengthening one's
